syntax = "proto3";

option go_package = "pb/gen";

import "validator.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


package ukama.network.v1;

service NetworkService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetByOrg(GetByOrgRequest) returns (GetByOrgResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}


message AddRequest{
    string name = 1 [(validator.field) = { string_not_empty: true}];
    string orgName = 2;
}
message AddResponse{
    Network network = 1;
    string org = 2;
}

message GetRequest{
    string name = 1 [(validator.field) = { string_not_empty: true}];
    string orgName = 2;
}

message GetResponse{
    Network network = 1;
    string org = 2;
}

message GetByOrgRequest{
    string orgName = 1;
}
message GetByOrgResponse{
    string org = 1;
    repeated Network networks = 2;
}

message DeleteRequest{
    string orgName = 1;
    string name = 2;
}

message DeleteResponse{
}

message Network {
    uint64 id = 1;
    string name = 2;
    string org = 3;
    bool isDeactivated = 4;
    google.protobuf.Timestamp created_at = 5;
}
